--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "WhatsAppHealthJournal"]
 	path = WhatsAppHealthLog
 	url = https://github.com/SPareshKumar/Smart-Health-Log-via-WhatsApp.git
+[submodule "BMICalculator"]
+	path = BMICalculator
+	url = https://github.com/AnishkaR10/BMI-Calculator.git
