--- a/.gitmodules
+++ b/.gitmodules
@@ -11,5 +11,5 @@
 	path = BMICalculator
 	url = https://github.com/AnishkaR10/BMI-Calculator.git
 [submodule "IndianDietGuide"]
-	path = IndianDietGuide
+	path = WiseBites
 	url = https://github.com/AnishkaR10/Indian-Diet-Guide.git
